--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -16,7 +16,6 @@ body > header {
   }
 
   nav {
-    display: block;
     ul {
       padding: 0;
       margin: auto;
